fix(tests): Phase 5.5 — popraviti preexisting test failures i net profit
- TaxServiceTest: stub findByIsDoneTrue() umesto findAll()
- OrderExecutionServiceTest: LENIENT mode + FundReservationService mock + novi API
- OrderExecutionServiceExtendedTest: obrisan (testirao pre-Phase 6 logiku, Phase6Test ga zamenio)
- VariableRateSchedulerTest: stub findByInterestTypeAndStatusIn() umesto findAll()
- OrderControllerTest: mock OtpService + SecurityContext, dodan otpCode u DTO
- TaxService: net profit agregira loss (bio clampovan na 0, tax ostaje 0 za net <= 0)
- OptionController.exerciseOption: uklonjen PreAuthorize, fine-grained u service sloju